# Copyright (C) 2014 InfiniDB, Inc.
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; version 2 of
# the License.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
# MA 02110-1301, USA.

bin_SCRIPTS = post-install pre-uninstall remote_command.sh \
calpontLogRotate transactionLog transactionLogArchiver.sh system_installer.sh \
module_installer.sh patch_installer.sh xm_installer.sh startupTests.sh \
director_installer.sh user_installer.sh performance_installer.sh \
remote_scp_get.sh calpontAlias run.sh upgrade-infinidb.sh \
post-mysql-install post-mysqld-install binary_installer.sh \
os_check.sh infinidb calpontSyslog calpontSyslog-ng syslogSetup.sh install-infinidb.sh \
remote_scp_put.sh calpontUninstall.sh infinidb.def \
remotessh.exp rsync.sh

dist_local_DATA = module

test:

coverage:

leakcheck:

docs:

bootstrap: install-data-am

