#  Copyright (C) 2014 InfiniDB, Inc.
#
#  This program is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License
#  as published by the Free Software Foundation; version 2 of
#  the License.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software
#  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
#  MA 02110-1301, USA.

bin_SCRIPTS = post-install pre-uninstall \
calpontLogRotate transactionLog transactionLogArchiver.sh \
startupTests.sh upgrade-infinidb.sh \
infinidb install-infinidb.sh calpontAlias run.sh \
post-mysql-install post-mysqld-install os_check.sh \
calpontSyslog calpontSyslog-ng syslogSetup.sh infinidb.def

dist_local_DATA = module

test:

coverage:

leakcheck:

docs:

bootstrap: install-data-am

